--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: scheduler-extender
-  namespace: default
+  namespace: kube-system
 spec:
   ports:
     - name: tcp-8000
