增加启动 informerFactory，增加指定部署sa账户

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -13,8 +13,9 @@ spec:
       labels:
         app: scheduler-extender
     spec:
+      serviceAccountName: my-sa
       containers:
-        - image: zhengyscn/scheduler-extender:v1.0.6
+        - image: zhengyscn/scheduler-extender:v1.0.8
           imagePullPolicy: IfNotPresent
           name: scheduler-extender
           command: ["/app/bin/scheduler-extender"]
